banana.yml
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  namespace: fruits
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---
kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: fruits
spec:
  selector:
    app: banana
  ports:
    - port: 5678
